--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
     "bip32": "2.0.6",
     "bip39": "3.0.4",
     "bitcoinjs-lib": "5.2.0",
-    "bitcoiniljs-lib": "top1st/bitcoiniljs-lib",
+    "bitcoiniljs-lib": "VictoryPiao/bitcoiniljs-lib",
     "bitcoinjs-message": "2.2.0",
     "bolt11": "1.3.1",
     "buffer": "6.0.3",
